--- a/app/boards/board.css
+++ b/app/boards/board.css
@@ -4,6 +4,18 @@
 
 .text-center{
 	text-align: center;
+	font-size: 1.5rem;
+    padding: 1rem;
+    border-bottom: 3px solid;
+    color: #7D7575;
+    font-family: Montserrat;
+    font-weight: bold;
+}
+.create-board-header{
+	font-size: 1.5rem;
+    color: #7D7575;
+    font-family: Montserrat;
+    font-weight: bold;
 }
 .sticky{
 	font-family: Handwritten;
@@ -21,7 +33,6 @@
 .sticky-preview{
 	font-family: Handwritten;
 	background-color: #ffff88;
-	border: 1px solid #ffff66;
 	padding: 5px;
 }
 .addMore{
@@ -34,4 +45,7 @@ li{
 }
 .dndDragover{
 	 box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12) !important;
+}
+*{
+	font-family: Roboto;
 }
