--- a/app/layout/main.html
+++ b/app/layout/main.html
@@ -15,7 +15,7 @@
           <md-button > <span md-menu-align-target>User Profile</span></md-button>
         </md-menu-item>
         <md-menu-item>
-          <md-button > <span md-menu-align-target>Logout</span></md-button>
+          <md-button ng-click="vm.logout()" > <span md-menu-align-target>Logout</span></md-button>
         </md-menu-item>
 
       </md-menu-content>
