--- a/app/layout/main.html
+++ b/app/layout/main.html
@@ -12,7 +12,7 @@
       </md-button>
       <md-menu-content width="4">
         <md-menu-item>
-          <md-button > <span md-menu-align-target>User Profile</span></md-button>
+          <md-button ui-sref="layout.profile" > <span md-menu-align-target>User Profile</span></md-button>
         </md-menu-item>
         <md-menu-item>
           <md-button ng-click="vm.logout()" > <span md-menu-align-target>Logout</span></md-button>
