Refactoring css using scss

--- a/sass/modules/_variables.scss
+++ b/sass/modules/_variables.scss
@@ -11,6 +11,7 @@ $color_hawkes_blue_approx: #cce9f7;
 $color_french_lilac_approx: #efbfef;
 $color_periwinkle_approx: #cfc6fd;
 $wild_sand: #f4f4f4;
+$red: rgb(221,44,0);
 
 //fonts
 $font_0: Montserrat;
