--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,13 @@
   text-align: center;
   font-size: 1.5rem;
   padding: 1rem;
-  color: #7d7575;
+  color: #7D7575;
   font-family: Montserrat;
   font-weight: bold; }
 
 .create-board-header {
   font-size: 1.2rem;
-  color: #7d7575;
+  color: #7D7575;
   font-family: Montserrat;
   font-weight: bold;
   padding-left: 1rem; }
@@ -19,11 +19,12 @@
 .sticky {
   font-family: Handwritten;
   height: 100%; }
-  .sticky .typing {
-    border: none;
-    outline: none;
-    resize: none;
-    background-color: transparent; }
+
+.sticky .typing {
+  border: none;
+  outline: none;
+  resize: none;
+  background-color: transparent; }
 
 .sticky-preview {
   font-family: Handwritten;
@@ -32,34 +33,45 @@
 
 .addMore {
   max-width: 46%;
-  border: 2px solid #d2d2d2;
+  border: 2px solid #D2D2D2;
   height: 136px; }
 
 li {
   list-style-type: none; }
 
 .dndDragover {
-  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12) !important; }
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12) !important; }
 
 * {
   font-family: Roboto; }
 
 .bggreen {
-  background-color: #bef1ba !important; }
+  background-color: #BEF1BA !important; }
 
 .bgblue {
-  background-color: #cce9f7 !important; }
+  background-color: #CCE9F7 !important; }
 
 .bgpink {
-  background-color: #efbfef !important; }
+  background-color: #EFBFEF !important; }
 
 .bgpurple {
-  background-color: #cfc6fd !important; }
+  background-color: #CFC6FD !important; }
 
 .bgwhite {
-  background-color: #f4f4f4 !important; }
+  background-color: #F4F4F4 !important; }
 
 .bgyellow {
   background-color: #ffff88 !important; }
+
+.login-page {
+  min-height: 100vh;
+  font-family: Roboto, sans-serif; }
+  .login-page .login-form {
+    padding: 25px; }
+
+.text-danger {
+  color: #dd2c00;
+  font-size: 12px;
+  line-height: 14px; }
 
 /*# sourceMappingURL=style.css.map */
