--- a/sass/pages/board.scss
+++ b/sass/pages/board.scss
@@ -1,66 +1,68 @@
-.section {
-  background-color: $color_mine_shaft_approx;
+.section{
+  background-color: #333;
 }
-.text-center {
+.text-center{
   text-align: center;
   font-size: 1.5rem;
-  padding: 1rem;
-  color: $color_tapa_approx;
-  font-family: $font_0;
-  font-weight: bold;
+    padding: 1rem;
+    color: #7D7575;
+    font-family: Montserrat;
+    font-weight: bold;
 }
-.create-board-header {
+.create-board-header{
   font-size: 1.2rem;
-  color: $color_tapa_approx;
-  font-family: $font_0;
-  font-weight: bold;
-  padding-left: 1rem;
+    color: #7D7575;
+    font-family: Montserrat;
+    font-weight: bold;
+    padding-left: 1rem;
 }
-.sticky {
-  font-family: $font_1;
+.sticky{
+  font-family: Handwritten;
   height: 100%;
-  .typing {
-    border: none;
-    outline: none;
-    resize: none;
-    background-color: transparent;
-  }
 }
-.sticky-preview {
-  font-family: $font_1;
-  background-color: $color_dolly_approx;
+
+.sticky .typing{
+  border: none;
+  outline: none;
+  resize: none;
+  background-color: transparent;
+}
+.sticky-preview{
+  font-family: Handwritten;
+  background-color: #ffff88;
   padding: 5px;
 }
-.addMore {
-  max-width: 46%;
-  border: 2px solid $color_quill_gray_approx;
+.addMore{
+  max-width:46%;
+  border: 2px solid #D2D2D2;
   height: 136px;
 }
-li {
+li{
   list-style-type: none;
 }
-.dndDragover {
-  //Instead of the line below you could use @include box-shadow($shadow-1, $shadow-2, $shadow-3, $shadow-4, $shadow-5, $shadow-6, $shadow-7, $shadow-8, $shadow-9, $shadow-10)
-  box-shadow: 0 2px 4px -1px $black_20, 0 4px 5px 0 $black_14, 0 1px 10px 0 $black_12 !important;
+.dndDragover{
+   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12) !important;
 }
-* {
-  font-family: $font_2;
+*{
+  font-family: Roboto;
 }
-.bggreen {
-  background-color: $color_madang_approx !important;
+
+
+.bggreen{
+  background-color: #BEF1BA !important;
 }
-.bgblue {
-  background-color: $color_hawkes_blue_approx !important;
+.bgblue{
+background-color:#CCE9F7 !important;
 }
-.bgpink {
-  background-color: $color_french_lilac_approx !important;
+.bgpink{
+background-color:#EFBFEF !important;
 }
-.bgpurple {
-  background-color: $color_periwinkle_approx !important;
+.bgpurple{
+background-color: #CFC6FD !important;
 }
-.bgwhite {
-  background-color: $wild_sand !important;
+.bgwhite{
+background-color:#F4F4F4 !important;
 }
-.bgyellow {
-  background-color: $color_dolly_approx !important;
+.bgyellow{
+background-color: #ffff88 !important;
 }
