--- a/sass/modules/_variables.scss
+++ b/sass/modules/_variables.scss
@@ -1,19 +1,3 @@
 //colors
-$color_mine_shaft_approx: #333;
-$color_tapa_approx: #7d7575;
-$color_dolly_approx: #ffff88;
-$color_quill_gray_approx: #d2d2d2;
-$black_20: rgba(0, 0, 0, 0.2);
-$black_14: rgba(0, 0, 0, 0.14);
-$black_12: rgba(0, 0, 0, 0.12);
-$color_madang_approx: #bef1ba;
-$color_hawkes_blue_approx: #cce9f7;
-$color_french_lilac_approx: #efbfef;
-$color_periwinkle_approx: #cfc6fd;
-$wild_sand: #f4f4f4;
-$red: rgb(221,44,0);
+$danger-color: rgb(221,44,0);
 
-//fonts
-$font_0: Montserrat;
-$font_1: Handwritten;
-$font_2: Roboto;
