--- a/sass/pages/_authentication.scss
+++ b/sass/pages/_authentication.scss
@@ -24,7 +24,7 @@
   /* ie6-9 */
   .login-form, .register-form {
     padding: 3rem;
-    .login-header{
+    .login-header, .register-header{
       font-size: 1.5rem;
       padding: 1rem;
       color: #7D7575;
