--- a/app/layout/main.html
+++ b/app/layout/main.html
@@ -7,6 +7,7 @@
                 </h2>
             </a>
             </md-button>
+            <span flex></span>
             <span>{{root.displayName}}</span>
             <md-menu md-offset="0 -7">
                 <md-button ng-click="$mdOpenMenu($event)" class="md-icon-button" aria-label="More">
