--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,12 @@ body {
 
 .sticky {
   font-family: Handwritten;
-  height: 100%; }
+  height: 100%;
+  position: relative; }
+  .sticky .delete {
+    position: absolute;
+    right: -4px;
+    top: 0; }
 
 .sticky .typing {
   border: none;
@@ -122,5 +127,21 @@ li {
 
 .bgyellow {
   background-color: #ffff88 !important; }
+
+.profile-image {
+  position: relative;
+  background: #ff4081;
+  width: 150px;
+  color: white;
+  font-weight: bold;
+  height: 150px;
+  font-size: 40px;
+  border: 1px solid #ccc;
+  margin: auto; }
+  .profile-image span {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%); }
 
 /*# sourceMappingURL=style.css.map */
